--- a/client/textBox.ui
+++ b/client/textBox.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>382</width>
-    <height>178</height>
+    <width>314</width>
+    <height>176</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -32,7 +32,7 @@
       <bool>true</bool>
      </property>
      <property name="title">
-      <string/>
+      <string>test</string>
      </property>
      <property name="checkable">
       <bool>false</bool>
